Update semantic kernel notebooks with new travel itineraries and adjust execution counts
- Updated execution counts in multiple code cells for consistency.
- Enhanced travel itineraries for day trips in various locations including Bali, Paris, Sydney, and Rio de Janeiro.
- Added user interaction scenarios for planning vacations and handling user preferences.
- Updated Python version in notebook metadata to 3.13.7.

--- a/01-intro-to-ai-agents/code_samples/01-semantic-kernel.ipynb
+++ b/01-intro-to-ai-agents/code_samples/01-semantic-kernel.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,9 +153,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# User: Plan me a day trip.\n",
+      "\n",
+      "# TravelAgent: How about a day trip to Bali, Indonesia? Here’s a suggested itinerary for your day:\n",
+      "\n",
+      "### Morning:\n",
+      "1. **Sunrise at Mount Batur**: Start your day early with a hike to Mount Batur for a breathtaking sunrise view. The trek usually takes about 2 hours, and the vistas are worth it!\n",
+      "\n",
+      "2. **Breakfast at a Local Warung**: After your hike, head to a local warung for a traditional Balinese breakfast. Enjoy dishes like Nasi Goreng or Bubur Ayam.\n",
+      "\n",
+      "### Mid-Morning:\n",
+      "3. **Visit the Tegallalang Rice Terraces**: Explore the iconic rice terraces where you can take stunning photos and learn about the traditional rice farming practices.\n",
+      "\n",
+      "### Afternoon:\n",
+      "4. **Ubud Sacred Monkey Forest Sanctuary**: Spend some time wandering through the Ubud Monkey Forest, where you can see playful monkeys in their natural habitat and visit ancient temples.\n",
+      "\n",
+      "5. **Lunch in Ubud**: Enjoy lunch at a café with views overlooking the rice fields or in the heart of Ubud.\n",
+      "\n",
+      "### Evening:\n",
+      "6. **Explore Ubud Market**: Browse through the Ubud Art Market for unique artisan souvenirs and local crafts.\n",
+      "\n",
+      "7. **Dinner with Traditional Dance Performance**: End your day with a cultural experience. Have dinner at a restaurant that offers a traditional Balinese dance performance.\n",
+      "\n",
+      "### Night:\n",
+      "8. **Relax at a Spa**: If time allows, unwind with a traditional Balinese massage at a local spa before heading back home.\n",
+      "\n",
+      "Feel free to adjust any activities based on your interests! Enjoy your trip to Bali!\n",
+      "# User: I don't like the destination you picked, can you pick another?\n",
+      "\n",
+      "# TravelAgent: How about a day trip to one of these destinations: Paris, France or Sydney, Australia? Here’s a quick itinerary for both options:\n",
+      "\n",
+      "### Option 1: Paris, France\n",
+      "#### Morning:\n",
+      "1. **Visit the Eiffel Tower**: Start your day with a visit to the iconic Eiffel Tower. You can take an elevator ride to the top for stunning views of the city.\n",
+      "\n",
+      "2. **Breakfast at a Café**: Enjoy a classic French breakfast of croissants and café au lait at a nearby café.\n",
+      "\n",
+      "#### Mid-Morning:\n",
+      "3. **Louvre Museum**: Explore the world-famous Louvre Museum. Make sure to see the Mona Lisa and other beautiful artworks.\n",
+      "\n",
+      "#### Afternoon:\n",
+      "4. **Lunch in Montmartre**: Head to the artistic district of Montmartre for lunch in a quaint bistro and visit the Sacré-Cœur Basilica.\n",
+      "\n",
+      "5. **Seine River Cruise**: Take a relaxing cruise along the Seine River to see many of Paris's famous landmarks from the water.\n",
+      "\n",
+      "#### Evening:\n",
+      "6. **Dinner in Le Marais**: Enjoy dinner at a trendy restaurant in the Le Marais district, known for its vibrant atmosphere.\n",
+      "\n",
+      "### Option 2: Sydney, Australia\n",
+      "#### Morning:\n",
+      "1. **Sydney Opera House**: Start your day by visiting the iconic Sydney Opera House. Take a guided tour if you have time.\n",
+      "\n",
+      "2. **Breakfast at the Rocks**: Enjoy a hearty breakfast at one of the cafes in The Rocks area, overlooking the harbor.\n",
+      "\n",
+      "#### Mid-Morning:\n",
+      "3. **Sydney Harbour Bridge**: Walk across the Sydney Harbour Bridge or consider a BridgeClimb for panoramic views of the city.\n",
+      "\n",
+      "#### Afternoon:\n",
+      "4. **Visit Bondi Beach**: Head to Bondi Beach for some sun and surf. Grab lunch at a beachside café.\n",
+      "\n",
+      "5. **Coastal Walk**: Take the scenic Bondi to Coogee coastal walk, enjoying beautiful ocean views.\n",
+      "\n",
+      "#### Evening:\n",
+      "6. **Dinner at Darling Harbour**: Wrap up your day with dinner at one of the many restaurants in Darling Harbour, enjoying views of the harbor.\n",
+      "\n",
+      "Let me know if you prefer one of these destinations or if you'd like me to suggest more!\n"
+     ]
+    }
+   ],
    "source": [
     "async def main():\n",
     "    # Create a new thread for the agent\n",
@@ -165,6 +237,7 @@
     "\n",
     "    user_inputs = [\n",
     "        \"Plan me a day trip.\",\n",
+    "        \"I don't like the destination you picked, can you pick another?\",\n",
     "    ]\n",
     "\n",
     "    for user_input in user_inputs:\n",
@@ -190,7 +263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.11)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
