--- a/03-agentic-design-patterns/code_samples/03-semantic-kernel.ipynb
+++ b/03-agentic-design-patterns/code_samples/03-semantic-kernel.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,16 +70,12 @@
     "    def __init__(self):\n",
     "        # List of vacation destinations\n",
     "        self.destinations = [\n",
-    "            \"Barcelona, Spain\",\n",
-    "            \"Paris, France\",\n",
-    "            \"Berlin, Germany\",\n",
-    "            \"Tokyo, Japan\",\n",
-    "            \"Sydney, Australia\",\n",
-    "            \"New York, USA\",\n",
-    "            \"Cairo, Egypt\",\n",
-    "            \"Cape Town, South Africa\",\n",
     "            \"Rio de Janeiro, Brazil\",\n",
-    "            \"Bali, Indonesia\"\n",
+    "            \"Sao Paulo, Brazil\",\n",
+    "            \"Florianopolis, Brazil\",\n",
+    "            \"Foz do Iguacu, Brazil\",\n",
+    "            \"Ceara, Brazil\",\n",
+    "            \"Salvador, Brazil\",\n",
     "        ]\n",
     "        # Track last destination to avoid repeats\n",
     "        self.last_destination = None\n",
@@ -102,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +145,9 @@
     "\n",
     "What kind of trip would you like me to help you plan today?\"\n",
     "\n",
-    "Always prioritize user preferences. If they mention a specific destination like \"Bali\" or \"Paris,\" focus your planning on that location rather than suggesting alternatives.\n",
+    "For each user request, follow these guidelines:\n",
+    "    - Always prioritize user preferences. If they mention a specific destination like \"Bali\" or \"Paris,\" focus your planning on that location rather than suggesting alternatives.\n",
+    "    - If the user does not specify a destination, pick one at random from the 'get_random_destination' list and create a plan around it. Don't ask the user for a destination if they haven't provided one.\n",
     "\"\"\"\n",
     "\n",
     "agent = ChatCompletionAgent(\n",
@@ -175,9 +173,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Hello! I'm your TravelAgent assistant. I can help plan vacations and suggest interesting destinations for you. Here are some things you can ask me:\n",
+       "1. Plan a day trip to a specific location\n",
+       "2. Suggest a random vacation destination\n",
+       "3. Find destinations with specific features (beaches, mountains, historical sites, etc.)\n",
+       "4. Plan an alternative trip if you don't like my first suggestion\n",
+       "\n",
+       "What kind of trip would you like me to help you plan today?</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>Plan me a day trip.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Could you please specify a location for your day trip? If you don’t have a specific place in mind, I can suggest a random destination for you!</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>I don't like that destination. Plan me another vacation.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Let's plan an exciting vacation to Rio de Janeiro, Brazil! Here's a 5-day itinerary to explore this vibrant city:\n",
+       "\n",
+       "### Day 1: Arrival in Rio de Janeiro\n",
+       "- **Morning:** Arrive at Rio de Janeiro International Airport (GIG) and check into your hotel.\n",
+       "- **Afternoon:** Explore Copacabana Beach. Relax on the beach or take a stroll along the iconic promenade.\n",
+       "- **Evening:** Dinner at a traditional Brazilian steakhouse (churrascaria). Be sure to try the local dish, feijoada.\n",
+       "\n",
+       "### Day 2: Sugarloaf Mountain & Christ the Redeemer\n",
+       "- **Morning:** Take the cable car up to Sugarloaf Mountain for stunning panoramic views of the city.\n",
+       "- **Afternoon:** Visit the famous Christ the Redeemer statue. You can reach it by train through the Tijuca National Park.\n",
+       "- **Evening:** Enjoy dinner in the Lapa neighborhood, known for its lively atmosphere and samba music.\n",
+       "\n",
+       "### Day 3: Exploring the Historic Center\n",
+       "- **Morning:** Explore downtown Rio, including sites like the Selaron Steps, the Municipal Theater, and the National Museum of Fine Arts.\n",
+       "- **Afternoon:** Visit the Metropolitan Cathedral and Confeitaria Colombo for coffee and pastries.\n",
+       "- **Evening:** Take a samba class or enjoy live samba music in a local bar.\n",
+       "\n",
+       "### Day 4: Nature and Adventure\n",
+       "- **Morning:** Head to the Jardim Botânico (Botanical Garden) for a peaceful morning among nature.\n",
+       "- **Afternoon:** Spend the afternoon hiking in the Tijuca National Park or lounging on Ipanema Beach.\n",
+       "- **Evening:** Watch the sunset from Arpoador Rock.\n",
+       "\n",
+       "### Day 5: Departure\n",
+       "- **Morning:** Last-minute shopping at the Feira de São Cristóvão for souvenirs and local crafts.\n",
+       "- **Afternoon:** Head to the airport for your departure.\n",
+       "\n",
+       "Feel free to adjust any of the activities or let me know if you need more information about a specific part of the trip!</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "user_inputs = [\n",
     "    \"Plan me a day trip.\",\n",
@@ -327,7 +394,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
