--- a/02-explore-agentic-frameworks/code_samples/02-autogen.ipynb
+++ b/02-explore-agentic-frameworks/code_samples/02-autogen.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +52,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vscode/.local/lib/python3.13/site-packages/autogen_ext/models/azure/_azure_ai_client.py:307: UserWarning: Missing required field 'structured_output' in ModelInfo. This field will be required in a future version of AutoGen.\n",
+      "  validate_model_info(config[\"model_info\"])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finish_reason='stop' content='The capital of France is Paris.' usage=RequestUsage(prompt_tokens=14, completion_tokens=8) cached=False logprobs=None thought=None\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv()\n",
     "client = AzureAIChatCompletionClient(\n",
@@ -92,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +135,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>Plan me a great sunny vacation</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>Assistant:</div><div style='margin-left:20px; white-space:pre-wrap'>Absolutely! Let's create a fantastic sunny vacation itinerary to one of the beautiful destinations known for its sunny weather, stunning beaches, and exciting activities. This time, let’s plan a week-long escape to **Maui, Hawaii**.\n",
+       "\n",
+       "### Destination: Maui, Hawaii\n",
+       "\n",
+       "#### Day 1: Arrival\n",
+       "- **Flight**: Arrive at Kahului Airport (OGG) in Maui.\n",
+       "- **Accommodations**: Check into a beachfront resort like **Hyatt Regency Maui Resort & Spa** or **Fairmont Kea Lani**.\n",
+       "- **Evening**: Relax and watch the sunset over the ocean at the resort. Dine at the hotel’s restaurant or explore nearby **Lahaina**, a charming historic town with various dining options.\n",
+       "\n",
+       "#### Day 2: Beach Exploration\n",
+       "- **Morning**: Spend the day at **Kaanapali Beach**. Enjoy swimming, snorkeling, or simply relaxing on the golden sands.\n",
+       "- **Lunch**: Grab a light lunch at **Duke’s Beach House**.\n",
+       "- **Afternoon**: Try stand-up paddleboarding or take a surf lesson.\n",
+       "- **Evening**: Attend a traditional Hawaiian luau, such as the **Old Lahaina Luau**, for a cultural experience with food and performances.\n",
+       "\n",
+       "#### Day 3: Road to Hana\n",
+       "- **Day Trip**: Drive the famous **Road to Hana**. Stop at scenic points along the way, including:\n",
+       "  - A visit to **Twin Falls**\n",
+       "  - **Waikamoi Nature Trail**\n",
+       "  - **Wai'anapanapa State Park** for black sand beaches\n",
+       "- **Lunch**: Pack a picnic or grab snacks at local fruit stands.\n",
+       "- **Evening**: Return back and relax at your resort. Enjoy a laid-back dinner.\n",
+       "\n",
+       "#### Day 4: Haleakalā National Park\n",
+       "- **Early Morning**: Depart before sunrise for **Haleakalā National Park** to witness a breathtaking sunrise from the summit.\n",
+       "- **Morning**: After sunrise, explore the hiking trails in the park.\n",
+       "- **Lunch**: Visit a local eatery in **Kula** for farm-to-table dishes.\n",
+       "- **Afternoon**: Head back and spend the afternoon at **Wailea Beach**.\n",
+       "- **Evening**: Dine at **Mama's Fish House**, known for its fresh seafood and stunning ocean views.\n",
+       "\n",
+       "#### Day 5: Molokini Crater Snorkeling\n",
+       "- **Day Trip**: Take a snorkeling tour to **Molokini Crater**, a marine preserve known for its crystal-clear waters and diverse marine life.\n",
+       "- **Lunch**: Enjoy a catered lunch on the boat or at a beach.\n",
+       "- **Afternoon**: Continue snorkeling or visit **Turtle Town** for a chance to swim with sea turtles.\n",
+       "- **Evening**: Return to Maui and unwind at the resort.\n",
+       "\n",
+       "#### Day 6: Explore Upcountry Maui\n",
+       "- **Morning**: Visit **Maui Winery** for a tour and tasting.\n",
+       "- **Midday**: Explore **Makawao**, an artist town with unique shops and galleries.\n",
+       "- **Lunch**: Enjoy lunch at **Casablanca** in Makawao.\n",
+       "- **Afternoon**: Explore the nearby **Ali'i Kula Lavender Farm** for stunning views and fragrant flowers.\n",
+       "- **Evening**: Return to the coast for a relaxed dinner at **Sansei Seafood Restaurant & Sushi Bar**.\n",
+       "\n",
+       "#### Day 7: Relaxation and Departure\n",
+       "- **Morning**: Enjoy your last morning at the beach or pool, soaking up the sun.\n",
+       "- **Breakfast**: Have a leisurely breakfast at the resort.\n",
+       "- **Check-Out**: Pack your bags and check out of the hotel.\n",
+       "- **Departure**: Head to Kahului Airport for your flight home.\n",
+       "\n",
+       "### Extra Tips:\n",
+       "- **Transportation**: Renting a car is highly recommended for flexibility and exploring the island.\n",
+       "- **Pack Essentials**: Sunscreen, swimwear, light clothing, hiking shoes, and a reusable water bottle.\n",
+       "- **Best Time to Visit**: The ideal time to visit Maui is from April to June and September to November for pleasant weather and fewer tourists.\n",
+       "\n",
+       "Let me know if you'd like to modify any aspects of the itinerary or if you have additional preferences! Enjoy your sunny getaway!</div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
@@ -158,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.11)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -172,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
