--- a/02-explore-agentic-frameworks/code_samples/02-semantic-kernel.ipynb
+++ b/02-explore-agentic-frameworks/code_samples/02-semantic-kernel.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +159,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>Plan me a day trip.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>How about a day trip to Rio de Janeiro, Brazil? Here's a suggested itinerary for your day:\n",
+       "\n",
+       "### Morning\n",
+       "- **Breakfast at Confeitaria Colombo**: Start your day at this historic café, famous for its pastries and colonial decor.\n",
+       "- **Christ the Redeemer**: Visit one of the New Seven Wonders of the World. Take the cog train up Corcovado Mountain and enjoy breathtaking views of the city.\n",
+       "\n",
+       "### Afternoon\n",
+       "- **Lunch at a Local Churrascaria**: Experience Brazilian barbecue at a traditional churrascaria, where you can try various meats and side dishes.\n",
+       "- **Visit the Sugarloaf Mountain**: Take a cable car ride to the summit for panoramic views of Rio's stunning coastline and cityscape.\n",
+       "\n",
+       "### Evening\n",
+       "- **Explore Copacabana Beach**: Relax on the world-famous beach, take a stroll along the promenade, or enjoy some beach sports.\n",
+       "- **Dinner at a Beachfront Restaurant**: End your day with a delicious meal at a restaurant with views of the Atlantic Ocean.\n",
+       "\n",
+       "### Optional Activities\n",
+       "- **Visit the Selarón Steps**: Check out this colorful staircase created by Chilean artist Jorge Selarón.\n",
+       "- **Take a Samba Class**: Experience a taste of Brazilian culture by joining a samba dance class.\n",
+       "\n",
+       "Enjoy your day trip to Rio de Janeiro! Let me know if you need further details or adjustments.</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>I don't like that destination. Plan me another vacation.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>How about a vacation to Tokyo, Japan? Here’s a suggested itinerary for a day trip in Tokyo:\n",
+       "\n",
+       "### Morning\n",
+       "- **Visit Senso-ji Temple**: Start your day at Tokyo's oldest temple located in Asakusa. Don’t forget to explore the surrounding Nakamise shopping street for traditional snacks.\n",
+       "- **Breakfast at a Local Café**: Grab a quick breakfast at a nearby café or try some traditional Japanese breakfast items.\n",
+       "\n",
+       "### Afternoon\n",
+       "- **Explore the Meiji Shrine**: Head to this peaceful Shinto shrine surrounded by a forested area, a perfect escape from the bustling city.\n",
+       "- **Lunch in Harajuku**: After the shrine, explore Harajuku's trendy streets and enjoy lunch at one of the many quirky themed cafés.\n",
+       "\n",
+       "### Evening\n",
+       "- **Stroll through Shibuya**: Experience the famous Shibuya Crossing and explore the surrounding shopping and entertainment district.\n",
+       "- **Dinner in Shinjuku**: Head to the vibrant district of Shinjuku for dinner - you can find everything from traditional izakayas to high-end sushi restaurants.\n",
+       "\n",
+       "### Optional Activities\n",
+       "- **Visit Tokyo Tower or Skytree**: Get an amazing view of the Tokyo skyline from one of these iconic towers.\n",
+       "- **Nightlife in Roppongi**: Consider exploring the nightlife in Roppongi, known for its bars and clubs.\n",
+       "\n",
+       "Feel free to let me know if Tokyo interests you or if you'd like to explore another destination!</div></div><hr>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "user_inputs = [\n",
     "    \"Plan me a day trip.\",\n",
@@ -245,7 +306,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.11)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
