--- a/03-agentic-design-patterns/code_samples/03-semantic-kernel.ipynb
+++ b/03-agentic-design-patterns/code_samples/03-semantic-kernel.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,9 @@
     "\n",
     "For each user request, follow these guidelines:\n",
     "    - Always prioritize user preferences. If they mention a specific destination like \"Bali\" or \"Paris,\" focus your planning on that location rather than suggesting alternatives.\n",
-    "    - If the user does not specify a destination, pick one at random from the 'get_random_destination' list and create a plan around it. Don't ask the user for a destination if they haven't provided one.\n",
+    "    - If the user does not specify a destination, pick one at random from the 'get_random_destination' list and create a plan around it.\n",
+    "    - Don't ask the user for a destination if they haven't provided one, get a random destination automatically.\n",
+    "    - If the user asks for a specific type of destination (e.g., \"beach,\" \"mountain,\" \"historical site\"), use the 'get_random_destination' function to find a suitable location that matches their request.\n",
     "\"\"\"\n",
     "\n",
     "agent = ChatCompletionAgent(\n",
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +199,35 @@
     {
      "data": {
       "text/html": [
-       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>Plan me a day trip.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Could you please specify a location for your day trip? If you don’t have a specific place in mind, I can suggest a random destination for you!</div></div><hr>"
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>Plan me a day trip.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Great choice! I’ll plan a day trip for you in Ceará, Brazil. Here’s a suggested itinerary:\n",
+       "\n",
+       "### Day Trip Itinerary in Ceará, Brazil\n",
+       "\n",
+       "**Morning:**\n",
+       "- **Start your day with breakfast**: Head to a local café for a traditional Brazilian breakfast. Try a pão de queijo (cheese bread) paired with fresh juice or coffee.\n",
+       "  \n",
+       "- **Visit Canoa Quebrada**: Take a short drive to Canoa Quebrada, a beautiful beach known for its stunning cliffs and crystal-clear water. Enjoy some time relaxing on the beach or exploring the vibrant local shops.\n",
+       "\n",
+       "**Midday:**\n",
+       "- **Lunch in Canoa Quebrada**: Enjoy a seafood lunch at one of the beachfront restaurants. Try the local dish \"peixe frito\" (fried fish) to savor the flavors of the sea.\n",
+       "\n",
+       "**Afternoon:**\n",
+       "- **Dune Tour**: After lunch, embark on a dune buggy tour of the surrounding sand dunes. This is an exhilarating way to see the dramatic landscape of Ceará and its stunning coastline.\n",
+       "\n",
+       "- **Kite Surfing Experience**: If you're adventurous, consider taking a kite surfing lesson in the afternoon. Ceará is known for excellent wind conditions, making it a perfect spot for this exciting sport.\n",
+       "\n",
+       "**Evening:**\n",
+       "- **Return to Fortaleza**: Head back to Fortaleza in the late afternoon.\n",
+       "\n",
+       "- **Dinner by the Beach**: Enjoy dinner at a beachfront restaurant in Fortaleza, indulging in traditional Brazilian cuisine while watching the sunset.\n",
+       "\n",
+       "- **Relax at a Local Bar**: Cap off your day at a nearby bar, sipping on a cocktail and enjoying the lively atmosphere.\n",
+       "\n",
+       "### Tips:\n",
+       "- Wear sunscreen and stay hydrated, especially if you're spending time on the beach.\n",
+       "- Be ready for some adventure and bring an extra set of clothes for water activities!\n",
+       "\n",
+       "Let me know if you need any additional details or changes to the plan!</div></div><hr>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -209,33 +239,33 @@
     {
      "data": {
       "text/html": [
-       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>I don't like that destination. Plan me another vacation.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Let's plan an exciting vacation to Rio de Janeiro, Brazil! Here's a 5-day itinerary to explore this vibrant city:\n",
+       "<div style='margin-bottom:10px'><div style='font-weight:bold'>User:</div><div style='margin-left:20px'>I don't like that destination. Plan me another vacation.</div></div><div style='margin-bottom:20px'><div style='font-weight:bold'>TravelAgent:</div><div style='margin-left:20px; white-space:pre-wrap'>Let’s plan a vacation in Salvador, Brazil! Here’s a suggested itinerary for a day trip that showcases the vibrant culture, history, and natural beauty of the region.\n",
        "\n",
-       "### Day 1: Arrival in Rio de Janeiro\n",
-       "- **Morning:** Arrive at Rio de Janeiro International Airport (GIG) and check into your hotel.\n",
-       "- **Afternoon:** Explore Copacabana Beach. Relax on the beach or take a stroll along the iconic promenade.\n",
-       "- **Evening:** Dinner at a traditional Brazilian steakhouse (churrascaria). Be sure to try the local dish, feijoada.\n",
+       "### Day Trip Itinerary in Salvador, Brazil\n",
        "\n",
-       "### Day 2: Sugarloaf Mountain & Christ the Redeemer\n",
-       "- **Morning:** Take the cable car up to Sugarloaf Mountain for stunning panoramic views of the city.\n",
-       "- **Afternoon:** Visit the famous Christ the Redeemer statue. You can reach it by train through the Tijuca National Park.\n",
-       "- **Evening:** Enjoy dinner in the Lapa neighborhood, known for its lively atmosphere and samba music.\n",
+       "**Morning:**\n",
+       "- **Breakfast at a Local Bakery**: Start your day with a typical Bahian breakfast. Try \"pão francês\" (French bread) with butter and some tropical fruit.\n",
+       "  \n",
+       "- **Visit Pelourinho**: Explore the historic neighborhood of Pelourinho, a UNESCO World Heritage site. Admire the colorful colonial buildings, street art, and cobblestone streets, and don't miss the Igreja de São Francisco with its stunning Baroque architecture.\n",
        "\n",
-       "### Day 3: Exploring the Historic Center\n",
-       "- **Morning:** Explore downtown Rio, including sites like the Selaron Steps, the Municipal Theater, and the National Museum of Fine Arts.\n",
-       "- **Afternoon:** Visit the Metropolitan Cathedral and Confeitaria Colombo for coffee and pastries.\n",
-       "- **Evening:** Take a samba class or enjoy live samba music in a local bar.\n",
+       "**Midday:**\n",
+       "- **Lunch at a Local Restaurant**: Enjoy a traditional Bahian meal. Try \"acarajé\" (black-eyed pea fritters stuffed with shrimp) or \"moqueca\" (seafood stew) at one of the local restaurants.\n",
        "\n",
-       "### Day 4: Nature and Adventure\n",
-       "- **Morning:** Head to the Jardim Botânico (Botanical Garden) for a peaceful morning among nature.\n",
-       "- **Afternoon:** Spend the afternoon hiking in the Tijuca National Park or lounging on Ipanema Beach.\n",
-       "- **Evening:** Watch the sunset from Arpoador Rock.\n",
+       "**Afternoon:**\n",
+       "- **Relax at Porto da Barra Beach**: Head to Porto da Barra Beach, one of the most popular beaches in Salvador. Spend some time swimming, sunbathing, or simply enjoying the scenic views of the bay.\n",
        "\n",
-       "### Day 5: Departure\n",
-       "- **Morning:** Last-minute shopping at the Feira de São Cristóvão for souvenirs and local crafts.\n",
-       "- **Afternoon:** Head to the airport for your departure.\n",
+       "- **Visit the Mercado Modelo**: After the beach, visit the Mercado Modelo, a lively market where you can shop for handmade crafts, souvenirs, and local food products. \n",
        "\n",
-       "Feel free to adjust any of the activities or let me know if you need more information about a specific part of the trip!</div></div><hr>"
+       "**Evening:**\n",
+       "- **Dinner with a View**: Dine at a restaurant with a view of the sunset over the bay. Enjoy fresh seafood while soaking in the beautiful scenery.\n",
+       "\n",
+       "- **Cultural Evening**: Consider attending a live music performance or a traditional dance show to experience the rich cultural heritage of Salvador. \n",
+       "\n",
+       "### Tips:\n",
+       "- Try to carry some local currency (Reais) for small purchases at markets and street vendors.\n",
+       "- Be prepared for the heat; light clothing and sunscreen are recommended.\n",
+       "\n",
+       "Let me know if you would like more details or adjustments to this plan!</div></div><hr>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
